Fixed sidebar overlapping with content in the API docs page. CLOUD-213

--- a/apps/cloudscalers_fe/base/wiki_gcb/.files/custom.css
+++ b/apps/cloudscalers_fe/base/wiki_gcb/.files/custom.css
@@ -1126,3 +1126,5 @@ color:#ddd;
 }
 
 .carousel-indicators { display: none; }
+
+#swagger-ui-container .container { width: auto; }
